# meshsnapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h
glNoX/: CMakeLists.txt  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h
